# esp32-espfs

./: CMakeLists.txt  README.md  requirements.txt
include/: espfs.h
src/: espfs.c  espfs_format.h  espfs_priv.h  espfs_vfs.c  heatshrink_config_custom.h
test/: CMakeLists.txt  esp_log.h  main.c  sdkconfig.h
tools/: mkespfsimage.py
